Fix up headers and appendix

--- a/src/book.tex
+++ b/src/book.tex
@@ -31,6 +31,8 @@ pdfkeywords={C64, 6502, Llamasoft, Iridis Alpha, Jeff Minter}%
 
  %Nice header with pages numbers                                         
 \usepackage{fancyhdr}                                                   
+\lhead[\leftmark]{}
+\rhead[]{\leftmark}
 
 %------------- IMGs ------------------
 \usepackage{graphicx}                                                   
