Fix up headers and appendix again

--- a/src/archaeo.tex
+++ b/src/archaeo.tex
@@ -1,4 +1,5 @@
 \chapter{A Little Archaeology} 
+\label{sec:archaeo}
 \lstset{style=6502Style}
 
 Iridis Alpha was distributed on cassette tape by the publisher Hewson Consultants. Normally used
