--- a/src/copyright.tex
+++ b/src/copyright.tex
@@ -16,8 +16,7 @@
 \end{figure}
 
 \vspace*{\fill}
-\textcopyright\ Rob Hogan 2022-2023, All Rights Reserved.
-
+\textcopyright\ Rob Hogan 2022-2023, All Rights Reserved. \\
 'Iridis Alpha' \textcopyright\ Jeff Minter 1986.
 
 \doclicenseThis
