Add some words to MIF

--- a/src/level_data.tex
+++ b/src/level_data.tex
@@ -61,7 +61,7 @@ the sheer variety of adversaries the player faces.
  Byte 8  & nullPtr                   & Hi Ptr for alternate enemy mode                             \\
  Byte 9  & nullPtr                   & \textbf{Unused} Lo Ptr to an arbitrary run of Bytes 18-21.\\
  Byte 10 & nullPtr                   & \textbf{Unused} Hi Ptr to an arbitrary run of Bytes 18-21.\\
- Byte 11 & \$00                       & \textbf{Unused} Rate limite for use of Bytes 9 and 10. \\
+ Byte 11 & \$00                       & \textbf{Unused} Rate limiter for use of Bytes 9 and 10. \\
  Byte 12 & nullPtr                   & \textbf{Unused} \\
  Byte 13 & nullPtr                   & \textbf{Unused} \\
  Byte 14 & \$00                       & Controls the rate at which new enemies are added.\\
