Add the Dev Diary

--- a/src/bib.tex
+++ b/src/bib.tex
@@ -26,5 +26,12 @@
   \textbf{Iridis Alpha: Tape Download},
   \href{http://www.llamasoftarchive.org/oldsite/llamasoft/cbm64/IridisAlpha.zip}{A tape copy of Iridis Alpha.}
 
+\bibitem{deflex} 
+  \textbf{The Origins of Deflex},
+  \href{https://web.archive.org/web/20230811235533/https://stinkygoat.livejournal.com/211183.html}{Jeff Minter's history of Deflex.}
+
+\bibitem{devdiary} 
+  \textbf{Iridis Alpha Development Diary},
+    \href{https://web.archive.org/web/20230322100622/https://codetapper.com/c64/diary-of-a-game/iridis-alpha/}{Jeff Minter's Development Diary, published in Zzap! magazine from issue 13 (May 1986) to issue 17 (September 1986).}
 
 \end{thebibliography}
