--- a/src/mif.tex
+++ b/src/mif.tex
@@ -13,8 +13,8 @@ was once ubiqitous thanks to its inclusion on Nokia mobile phones in the 1990s, 
 Snake dates back to at least 1976 when the concept first appeared in an arcade game called 'Blockade'.
 
 Perhaps the most noteworthy thing about 'Made in France' (MIF) is how many times Minter has made and remade it. His very
-first attempt at the format was one of his earliest games. 'Deflex' was coded in 1981 while he was in college and had access to the 
-computer science department's Commodore PET. Viewed side by side it's obvious that one is a slightly more colorful
+first attempt at the format was one of his earliest games. 'Deflex' was coded in 1979 while he was in college and had access to a 
+Commodore PET. Viewed side by side it's obvious that one is a slightly more colorful
 remake of the other.
 
 \begin{figure}[H]
@@ -139,4 +139,6 @@ PerformGamePlayUpdates
     JMP $EA31
 \end{lstlisting}
 
+Minter has written up a bit more on the \href{https://web.archive.org/web/20230811235533/https://stinkygoat.livejournal.com/211183.html}{history of Deflex} and
+its various incarnations throughout the years.
 
