--- a/src/book.tex
+++ b/src/book.tex
@@ -1,4 +1,11 @@
+% Don't have blank pages for the PDF version, but
+% make sure content starts on the right hand side for the
+% print version.
+\ifx\forprint\undefined
+\documentclass[oneside]{book}                            
+\else
 \documentclass[twoside,openright]{book}                            
+\fi
 \usepackage[sfdefault]{roboto}   
 
 % Usage of /href
@@ -455,28 +462,30 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 
 \tableofcontents 
 
-%\subfile{src/preface} %draft
-%\subfile{src/binary} %draft
-%\subfile{src/archaeo} %draft
-%\subfile{src/disassembly} %draft
-%\subfile{src/titlescreen}
-%\subfile{src/planets} % draft
-%\subfile{src/main_game} % draft
-%\subfile{src/level_data} % draft
-%\subfile{src/bonusphase} % draft
-%\subfile{src/music} % draft
-%\subfile{src/torus} % draft
+\subfile{src/preface} %draft
+\subfile{src/binary} %draft
+\subfile{src/archaeo} %draft
+\subfile{src/disassembly} %draft
+\subfile{src/titlescreen}
+\subfile{src/planets} % draft
+\subfile{src/main_game} % draft
+\subfile{src/level_data} % draft
+\subfile{src/bonusphase} % draft
+\subfile{src/music} % draft
+\subfile{src/torus} % draft
 \subfile{src/mif}
-%\subfile{src/dna} % wip
-%\subfile{src/torus-animation} % draft
-%\subfile{src/bugs} %draft
-%\appendix
-%\subfile{src/sprite_appendix} % draft
-%\subfile{src/level_data_appendix} %draft
-%\subfile{src/planets_appendix} % draft
-%\subfile{src/music_appendix} % draft
-%\subfile{src/bonusphase_appendix} % draft
-%\subfile{src/bumph} %draft
+\subfile{src/dna} % wip
+\subfile{src/torus-animation} % draft
+\subfile{src/bugs} %draft
+\appendix
+\chapter*{Appendices}
+\subfile{src/dev_diary} % draft
+\subfile{src/sprite_appendix} % draft
+\subfile{src/level_data_appendix} %draft
+\subfile{src/planets_appendix} % draft
+\subfile{src/music_appendix} % draft
+\subfile{src/bonusphase_appendix} % draft
+\subfile{src/bumph} %draft
 
 % Obsolete
 %\subfile{src/level_data_appendix_detail} % draft obsolete?
