--- a/src/bugs.tex
+++ b/src/bugs.tex
@@ -3,7 +3,7 @@
 \lstset{style=6502Style}
 
 \section{The Byte that Broke}
-\begin{q}{Jeff Minter's Newsletter 'The Nature of the Beast' August 1986\cite{planner}}
+\begin{q}{Jeff Minter's Newsletter 'The Nature of the Beast' August 1986\cite{beast}}
 We must apologise to some of the earliest purchasers of IA, as well... it
 seems that some data was corrupted during the production phase of the
 data duplication, and the first few hundred copies of the game used to bug
