--- a/src/level_data.tex
+++ b/src/level_data.tex
@@ -3,7 +3,7 @@
 
 \lstset{style=6502Style}
 
-\begin{q}{Jeff Minter's Development Diary in Zzap Magazine\cite{planner}}
+\begin{q}{Jeff Minter's Development Diary in Zzap Magazine\cite{devdiary}}
 ACONT 
 
 This is the bit that I knew would take me ages to write and get glitch
