--- a/src/music.tex
+++ b/src/music.tex
@@ -458,7 +458,7 @@ MaybePlayVoice3
     \draw[]
       (frame.north west) rectangle (frame.south east);},
 ]{}
-Extracting the Title Music
+\subsubsection{Extracting the Title Music}
 
 Since each tune is dynamically generated there's nowhere for us to pull them from. We could record
 the tunes as audio files and maybe extract something useful that way. A feature of Vice, the C64
