--- a/src/planets.tex
+++ b/src/planets.tex
@@ -1,7 +1,7 @@
 \chapter{Making Planets for Nigel} 
 \label{sec:planets}
 
-\begin{q}{Jeff Minter's Development Diary in Zzap Magazine\cite{planner}}
+\begin{q}{Jeff Minter's Development Diary in Zzap Magazine\cite{devdiary}}
 17 February 1986 
 
 Redid the graphics completely, came up with some really
