--- a/src/bib.tex
+++ b/src/bib.tex
@@ -34,4 +34,7 @@
   \textbf{Iridis Alpha Development Diary},
     \href{https://web.archive.org/web/20230322100622/https://codetapper.com/c64/diary-of-a-game/iridis-alpha/}{Jeff Minter's Development Diary, published in Zzap! magazine from issue 13 (May 1986) to issue 17 (September 1986).}
 
+\bibitem{beast} 
+  \textbf{The Nature of the Beast},
+    \href{https://web.archive.org/web/20230322100622/https://codetapper.com/c64/diary-of-a-game/iridis-alpha/}{ Jeff Minter's regular newsletter to Llamasoft subscribers.}
 \end{thebibliography}
